--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.scss
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.scss
@@ -5,55 +5,63 @@ section.sign-up-wizard {
   flex-direction: column;
   height: 100%;
   width: 100%;
-  box-sizing: border-box;
-  padding: 67px 32px 0 32px;
 
-  p.sign-up-title {
-    font-weight: 700;
-    margin: 0;
-    font-size: 24px;
-    line-height: 28px;
-    letter-spacing: 0.31px;
-    text-align: left;
-  }
-
-  // Material stepper
-  ::ng-deep {
-    .mat-horizontal-content-container {
-      height: 100%;
+  div.up {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 67px 32px 0 32px;
+    p.sign-up-title {
+      font-weight: 700;
+      margin: 0;
+      font-size: 24px;
+      line-height: 28px;
+      letter-spacing: 0.31px;
+      text-align: left;
     }
-
-    .mat-horizontal-stepper-content {
-      height: 100%;
-    }
-
-    .mat-stepper-horizontal {
+    div.step-circles {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       padding: 28px 0;
-      background-color: transparent;
 
-      .mat-horizontal-stepper-header-container {
-        padding: 0;
+      div.circle {
+        box-sizing: border-box;
         display: flex;
-        align-self: center;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        border: solid 2px rgba(0, 0, 0, 0.2);
 
-        .mat-step-header {
-          padding: 0;
-
-          div.mat-step-icon-state-number {
-            border-width: 2px;
-          }
+        p {
+          font-size: 22px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.14;
+          letter-spacing: 0.28px;
+          text-align: left;
+          color: rgba(0, 0, 0, 0.87);
         }
 
-        .mat-stepper-horizontal-line {
-          margin: 0 10px !important;
+        &.active {
+          border-color: #ce564b;
+        }
+      }
+
+      div.separator {
+        width: 61px;
+        height: 2px;
+        border: solid 1px rgba(0, 0, 0, 0.2);
+
+        &.active {
+          border-color: #ce564b;
         }
       }
     }
-  }
-
-  div.main-container {
-    height: 100%;
   }
 
   div.terms {
@@ -62,7 +70,7 @@ section.sign-up-wizard {
     height: 100%;
     justify-content: space-between;
     box-sizing: border-box;
-    padding-bottom: 90px;
+    padding:  0 41px;
 
     div.terms-and-condition {
       display: flex;
@@ -91,19 +99,20 @@ section.sign-up-wizard {
 
       }
     }
-
-    div.controls {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      button.confirm {
-        margin-bottom: 10px;
-      }
-    }
-
   }
 
+  div.controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 0 16px;
+    margin-bottom: 33px;
+
+    button.confirm {
+      margin-bottom: 10px;
+    }
+  }
 
   button.confirm {
     height: 56px;
