--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -1,33 +1,24 @@
 @import "../../../../assets/colors";
 
 :host {
-  width: 100%;
   height: 100%;
-  position: absolute;
-  top: 225px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  padding: 0 16px;
 }
-
-
 
 section.sign-up {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   box-sizing: border-box;
-  padding-bottom: 150px;
+  padding: 0 16px;
 
   form.signInForm {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
 
     div.row {
       display: flex;
@@ -72,6 +63,15 @@ section.sign-up {
         box-sizing: border-box;
         padding: 0.5em;
       }
+
+      svg.eye {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+      }
     }
   }
 
@@ -79,6 +79,7 @@ section.sign-up {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 33px;
 
     button.confirm {
       height: 56px;
